add TODO and explanations