@@ -5,6 +5,7 @@ import com.football_transfer_market.Dto.TeamPlayerDto;
 import com.football_transfer_market.Models.Player;
 import com.football_transfer_market.Models.Team;
 import com.football_transfer_market.Repository.TeamRepository;
+import com.football_transfer_market.utils.mapper.PlayerMapper;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -15,21 +16,29 @@ import java.util.stream.Collectors;
 @Service
 public class TeamService {
 
-    @Autowired
-    private TeamRepository teamRepository;
+    //TODO menyra e sygjeruar per Dependency injection eshte me konstruktor sic e bera une ketu me poshte dhe jo me @Autowired
+    private final TeamRepository teamRepository;
 
-    @Autowired
-    private ModelMapper modelMapper;
+    private final ModelMapper modelMapper;
+
+    public TeamService(TeamRepository teamRepository, ModelMapper modelMapper) {
+        this.teamRepository = teamRepository;
+        this.modelMapper = modelMapper;
+    }
 
     public List<TeamCountryDto> getAllTeams(){
         return teamRepository.findAll()
                 .stream()
                 .map(this::convertEntityToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private TeamCountryDto convertEntityToDto(Team team) {
 
+        //TODO kte pse e ke perdorur? Nuk ke pse te kesh variabla "ambiguous" pra me shume se sa nje variabel qe te perkoje me emrin
+        // te sygjeroj te perdoresh mapstruct, eshte me e sakte dhe me e shpejte sepse gjeneron kod per te mappuar nga entitet ne dto dhe nuk e ben kete gje
+        // me vone gjate runtime te aplikacionit sic e ben model mapper
+        // E kam konfiguruar une per projektin dhe mund te shikosh nje shembull tek Player Sevice
         modelMapper.getConfiguration().setAmbiguityIgnored(true);
 
         TeamCountryDto teamCountryDto;
@@ -40,8 +49,6 @@ public class TeamService {
     }
 
     private Team convertDtoToEntity(TeamCountryDto teamCountryDto) {
-
-        
         modelMapper.getConfiguration().setAmbiguityIgnored(true);
 
         Team team;
@@ -49,4 +56,5 @@ public class TeamService {
         team = modelMapper.map(teamCountryDto,Team.class);
         return team;
     }
+
 }
